--- a/index-en.html
+++ b/index-en.html
@@ -14,6 +14,11 @@
     <!-- PDF.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
 
+    <!-- JSZip library for creating and reading zip files -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
+
+    <!-- FileSaver.js library for saving files -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
 
     <!-- Pannellum -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"/>
@@ -85,14 +90,11 @@
         <button id="reset-btn" class="icon-btn" onclick="resetGame()">
             <img src="assets/menu-icons/reset.png" height="30px" width="30px">
         </button>
-        <button id="import-csv-btn" class="icon-btn" onclick="importCSV()">
-            <img src="assets/menu-icons/import-csv.png"  height="30px" width="30px">
+        <button id="import-btn" class="icon-btn" onclick="importScenario()">
+            <img src="assets/menu-icons/import.png"  height="30px" width="30px">
         </button>
-        <button id="export-csv-btn" class="icon-btn" onclick="exportToCSV()">
-            <img src="assets/menu-icons/export-csv.png" height="30px" width="30px">
-        </button>
-        <button id="export-pdf-btn" class="icon-btn" onclick="exportPDF()">
-            <img src="assets/menu-icons/export-pdf.png" height="30px" width="30px">
+        <button id="save-btn" class="icon-btn" onclick="saveScenario()">
+            <img src="assets/menu-icons/save.png" height="30px" width="30px">
         </button>
 
         <!-- Info Button -->
