--- a/index-en.html
+++ b/index-en.html
@@ -163,10 +163,10 @@
             <h4>Polygon Area: <span id="area">0</span> sq.m.</h4>
             <h4>Area's Cost: €<span id="polygonCost">0</span></h4>
 
-            <label for="area-title">Area Title:</label>
+            <label for="area-title">Area Title:</label><br>
             <textarea id="area-title" name="area-title" required style="width: 200px; height: 20px;"></textarea><br><br>
            
-            <label for="description">Description:</label>
+            <label for="description">Description:</label><br>
             <textarea id="description" name="description" required style="width: 200px; height: 100px;"></textarea><br><br>
     
             <label>NBS Selection:</label><br>
