--- a/index-en.html
+++ b/index-en.html
@@ -109,6 +109,7 @@
                 <h4>Set Initial Budget:
                 <input type="number" id="initial-budget-input" placeholder="Enter Budget">
                 <button class="tooltip" onclick="setInitialBudget()"><span id="submitBtn">Submit</span></button></h4>
+                <h5>Budget between €20.000 - €100.000</h5>
             </div>
 
             <div class="instruction-section">
