--- a/index-en.html
+++ b/index-en.html
@@ -212,7 +212,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.plugin.split_text_to_size.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.plugin.annotations.min.js"></script>
     
+    <script src="js/initial.js"></script>
     <script src="js/app.js"></script>
+
 
 </body>
 </html>
