--- a/index-en.html
+++ b/index-en.html
@@ -104,7 +104,7 @@
 
         <!-- Info text -->
         <div class="overlay" id="overlay"></div>
-        <div class="info-popup" id="popup">
+        <div class="info-popup" id="info-popup">
             <div>
                 <h4>Set Initial Budget:
                 <input type="number" id="initial-budget-input" placeholder="Enter Budget">
