--- a/index-en.html
+++ b/index-en.html
@@ -35,7 +35,7 @@
    
     <div class="gallery" id="gallery">
         <img src="assets/menu-icons/trl.png" style="border: none; width: 80px; display: block; margin: 0 auto; padding-top: 5px;"> 
-        <h3 class="gallery-title">CoPaB </h3>
+        <h3 class="gallery-title">CoPaB</h3>
         <img src="assets/menu-icons/eu-funded.png" style="border: none; width: 70px; display: block; margin: 0 auto;"> 
     </div>
     
@@ -104,7 +104,7 @@
 
         <!-- Info text -->
         <div class="overlay" id="overlay"></div>
-        <div class="info-popup" id="info-popup">
+        <div class="info-popup" id="popup">
             <div>
                 <h4>Set Initial Budget:
                 <input type="number" id="initial-budget-input" placeholder="Enter Budget">
